<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_login_status"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:layout_weight="1"
            android:background="#DDDDDD"
            android:scrollbars="vertical"
            android:text="LOGIN STATUS"
            android:textColor="#000000"
            android:textIsSelectable="true"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="HardcodedText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/LoginStr" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:ems="15"
                android:hint="@string/UsernameStr"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteY="78dp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="15"
                android:hint="@string/PasswordStr"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteY="78dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_password_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/PasswordLoginStr" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_monitoring"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:gravity="center"
                android:scrollbars="vertical"
                android:textColor="#000000"
                android:textIsSelectable="true"
                android:textSize="16sp"
                android:textStyle="bold"/>
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>